Simplify url resolution, remove NJSW dependency