@@ -11,8 +11,6 @@ import java.nio.file.Path;
 import java.util.Arrays;
 import java.util.Map;
 
-import javax.ws.rs.core.UriBuilder;
-
 import us.kbase.narrativejobservice.JobRunnerConstants;
 import us.kbase.narrativejobservice.LineLogger;
 
@@ -158,8 +156,8 @@ public class CallbackServerConfigBuilder {
     
     private static URL resolveURL(final URL url, final String ext) {
         try {
-            return UriBuilder.fromUri(url.toURI()).path(ext).build().toURL();
-        } catch (MalformedURLException | URISyntaxException e) {
+            return new URL(url, ext);
+        } catch (MalformedURLException e) {
             throw new RuntimeException(e); //something is really messed up
         }
     }
